| Bug #50467 | all clusterlog statistics=8 does not print Operations | ||
|---|---|---|---|
| Submitted: | 20 Jan 2010 10:43 | Modified: | 22 Jan 2010 23:57 |
| Reporter: | Johan Andersson | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | mysql-5.1-telco-7.0-spj, mysql-5.1 | OS: | Any |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
| Tags: | CLUSTERLOG, Operation | ||
[20 Jan 2010 10:43]
Johan Andersson
[20 Jan 2010 13:31]
Johan Andersson
Also in 7.0.10
[22 Jan 2010 11:18]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/97847 3359 Jonas Oreland 2010-01-22 ndb - bug#50467 - fix operations counter reporting
[22 Jan 2010 11:19]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/97848 3359 Jonas Oreland 2010-01-22 ndb - bug#50467 - fix operations counter reporting
[22 Jan 2010 11:20]
Jonas Oreland
pushed to 7.0.11 this is a regression introduced in 7.0.10 since some data was uninitialized this also caused "random" events to be sent to cluster log, such as "node 0 disconnected" or similar
[22 Jan 2010 23:57]
Jon Stephens
DOcumented bugfix in the NDB-7.0.11 changelog as follows:
Local query handler information was not reported or written to
the cluster log correctly. This issue is thought to have been
introduced in MySQL Cluster NDB 7.0.10.
Closed.
