ndb - bug#50467 - fix operations counter reporting